--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express": "~4.16.1",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongoose": "^5.9.10",
+    "morgan": "~1.9.1",
+    "bcrypt": "^4.0.1"
   }
 }
