--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "cloudinary": "^1.21.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -15,6 +16,8 @@
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.10",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^2.2.1"
   }
 }
