--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT = 3000
 MONGO_URI= mongodb://localhost:27017/perfectlyFood
+CLOUDINARY_NAME="dz6bjdpuk"
+CLOUDINARY_KEY= 822282348563416
+CLOUDINARY_SECRET="xVc7WibQjHPdzaHjplIxrzZc0rM"
+SESSION_SECRET="test"
