--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "hbs": "^4.1.1",
+    "howler": "^2.1.3",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.10",
     "morgan": "~1.9.1",
