--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 PORT = 3000
 MONGO_URI= mongodb://localhost:27017/perfectlyFood
+
+SESSION_SECRET="test"
+
+CLOUDINARY_NAME = dh5lf0bs5
+CLOUDINARY_KEY = 785398734313594
+CLOUDINARY_SECRET = fu3gakN-YFGFJF8Yhb_dZO8il0g
